--- a/sample/src/main/res/layout/fragment_recycler_view_xml.xml
+++ b/sample/src/main/res/layout/fragment_recycler_view_xml.xml
@@ -6,4 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     crl:footer_layout="@layout/swipe_refresh_footer"
-    tools:context=".app.ListViewFragment" />
+    tools:context=".app.RecyclerViewFragment" />
