--- a/sample/src/main/res/layout/fragment_grid_view_xml.xml
+++ b/sample/src/main/res/layout/fragment_grid_view_xml.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:numColumns="2"
-    tools:context=".app.ListViewFragment" />
+    tools:context=".app.GridViewFragment" />
