--- a/sample/src/main/res/layout/fragment_web_view_xml.xml
+++ b/sample/src/main/res/layout/fragment_web_view_xml.xml
@@ -4,4 +4,4 @@
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.ListViewFragment" />
+    tools:context=".app.WebViewFragment" />
