--- a/sample/src/main/res/layout/fragment_recycler_view_xml.xml
+++ b/sample/src/main/res/layout/fragment_recycler_view_xml.xml
@@ -5,5 +5,7 @@
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    crl:footer_layout="@layout/swipe_refresh_footer"
+    crl:load_layout="@layout/swipe_refresh_footer"
+    crl:load_completed_text="加载完成"
+    crl:load_text="加载中..."
     tools:context=".app.RecyclerViewFragment" />
