--- a/sample/src/main/res/layout/fragment_grid_view_xml.xml
+++ b/sample/src/main/res/layout/fragment_grid_view_xml.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.mylhyl.crlayout.sample.widget.MySwipeRefreshGridView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:crl="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:numColumns="2"
+    crl:load_completed_text="全部加载完成"
     tools:context=".app.GridViewFragment" />
