--- a/sample/src/main/res/layout/fragment_list_view_xml.xml
+++ b/sample/src/main/res/layout/fragment_list_view_xml.xml
@@ -5,7 +5,8 @@
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/darker_gray"
     android:listSelector="@drawable/selector_list"
-    crl:footer_text="数据正在加载中"
-    crl:footer_indeterminate_drawable="@drawable/footer_progressbar"
+    crl:load_text="数据正在加载中"
+    crl:load_indeterminate_drawable="@drawable/footer_progressbar"
     tools:context=".app.ListViewFragment" />
